web-infras/parser/tests/fixtures/babel/es2022/class-private-names-duplicated/static-field-instance-get/output.txt
[SyntaxError]: Duplicate private name. (3,7)
3|  get #x() {}
 |     ^
